<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Inventory</string>

    <!-- Label for overflow menu option that inserts sample data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Books</string>

    <!-- Title for the activity to add a new book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_book">Add a New Item</string>

    <!-- Title for the activity to edit an existing book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_book">Edit Item</string>

    <!-- Label for editor menu option to save book and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current book [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for each item in the editor [CHAR LIMIT=30] -->
    <string name="label_title">Book</string>
    <string name="label_price">Price\ \ \ </string>
    <string name="label_supplier">Supplier\ \ \ </string>
    <string name="label_supplier_phone">Supplier Phone</string>
    <string name="label_quantity">Stock\ \ \ </string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_title">Title</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_price">Price</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_quantity">Quantity</string>

    <!-- Text hint for field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_supplier">Supplier</string>

    <!-- Text hint for field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_supplier_phone">Supplier Phone</string>

    <!-- Toast message in editor when new item has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_item_successful">New item added</string>

    <!-- Toast message in editor when new item has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_item_failed">Error with saving item</string>

    <!-- Toast message in editor when new item has been successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_item_successful">Item updated</string>

    <!-- Toast message in editor when new item has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_item_failed">Error when updating item</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\\\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add an item [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding an item</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current item was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_successful">Item deleted</string>

    <!-- Toast message in editor when current item has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_failed">Error with deleting item</string>

    <!-- Dialog message to ask the user to confirm deleting the current item [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this item?</string>

    <!-- Dialog button text for the option to confirm deleting the current item [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current item [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Dialog message to ask the user to confirm deleting the current item [CHAR LIMIT=NONE] -->
    <string name="required_fields_msg">Please fill in the required fields:\nTitle and Supplier Phone number</string>

    <!-- Dialog button text for the option to confirm deleting the current item [CHAR LIMIT=20] -->
    <string name="dialog_ok">Ok</string>

    <!-- Label for the price if it is unknown [CHAR LIMIT=20] -->
    <string name="unknown_supplier">Unknown</string>

    <!-- Out of Stock Label [CHAR LIMIT=20] -->
    <string name="toast_out_of_stock">Out of Stock</string>
    <string name="supplier_string_null_message">Supplier field is required</string>

    <!-- Error messages [CHAR LIMIT=50] -->
    <string name="missing_supplier_message">No supplier provided</string>
    <string name="title_null_error">A title is required</string>
    <string name="supplier_null_error">A supplier name is required</string>
    <string name="supplier_phone_null_error">A supplier phone number is required</string>
    <string name="quantity_null_error">The quantity is required</string>
    <string name="price_null_error">The price is required</string>
    <string name="missing_required_fields">Please enter in required fields</string>

    <string name="quantity_less_than_0_error_msg">Quantity cannot be less than 0</string>
    <string name="quantity_max_error_msg">Maximum quantity is 500</string>

</resources>
