<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="@dimen/paddingSmall"
            android:orientation="vertical">

            <!-- Title field -->
            <EditText
                android:id="@+id/edit_book_title"
                android:hint="@string/hint_book_title"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_book_price"
                android:hint="@string/hint_book_price"
                android:inputType="numberDecimal"
                style="@style/EditorFieldStyle" />

            <!-- Supplier field -->
            <EditText
                android:id="@+id/edit_book_supplier"
                android:hint="@string/hint_book_supplier"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Supplier Phone Number field -->
            <EditText
                android:id="@+id/edit_book_supplier_phone"
                android:hint="@string/hint_book_supplier_phone"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>

    <!-- Stock category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/paddingXLarge">

        <!-- Label -->
        <TextView
            android:text="@string/category_stock"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="@dimen/paddingSmall"
            android:orientation="vertical">

            <!-- Quantity field -->
            <EditText
                android:id="@+id/edit_book_quantity"
                android:hint="@string/hint_book_quantity"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:onClick="decrement"
                android:text="-" />
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:onClick="increment"
                android:text="+" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
